# aurora-rs-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  run.sh
.cargo/: config.toml
rpm/: com.keygenqt.aurora_rs_mcp.spec  ru.kotdath.aurora_rs_mcp.spec
rpm/applications/: com.keygenqt.aurora_rs_mcp.desktop  ru.kotdath.aurora_rs_mcp.desktop
src/: main.rs  mcp_server.rs
src/clib/: c_appdir.rs  libappdir.rs  mod.rs
src/cxx/: mod.rs
src/cxx/cpp/format/: cxx_format.cpp  cxx_format.h
src/cxx/cpp/qnetwork/: cxx_qnetwork.cpp  cxx_qnetwork.h
src/cxx/rust/: cxx_format.rs  cxx_qnetwork.rs
src/dbus/: dbus_deviceinfo.rs  mod.rs
src/window/: mod.rs
src/window/app_skia/: main.rs
src/window/app_winit/: application.rs  main.rs
