[package]
name = "aurora-rs-mcp"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
links = "aurora-rs-mcp"

[dependencies]
libc = "0.2"
dbus = "0.9.9"
cxx = "1.0"
clap = { version = "4.3", features = ["derive"] }

# MCP Server dependencies
rmcp = { version = "0.9.0", features = ["server", "transport-streamable-http-server", "macros"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

[build-dependencies]
bindgen = "0.72"
cxx-build = "1.0"
pkg-config = "0.3"

[profile.dev]
strip = true
lto = true
codegen-units = 1

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

# armv7hl + .cargo/config.toml
[workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf]
image = "ubuntu:24.04"
pre-build = ["apt-get update && apt-get -y install build-essential clang pkg-config g++-arm-linux-gnueabihf"]

# aarch64 + .cargo/config.toml
[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "ubuntu:24.04"
pre-build = ["apt-get update && apt-get -y install build-essential clang pkg-config g++-aarch64-linux-gnu"]

# x86_64 + .cargo/config.toml
[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
image = "ubuntu:24.04"
pre-build = ["apt-get update && apt-get -y install build-essential clang pkg-config"]
